--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - 3.6
 
-install: pip install -r requirements.txt -t src/
+install:
+  - pip install -r requirements.txt -t src/
+  - pip install boto3
 
 script: python deploy.py
