fix syntax errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+# The following environmental variables need to be set in the Travis console
+# AWS_DEFAULT_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
+
 language: python
 python:
   - 3.6
